@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.serialzone.cz"
        name="SerialZone.cz"
-       version="2.3"
+       version="2.4"
        provider-name="ekarorgit">
     <requires>
         <import addon="xbmc.metadata" version="2.1.0"/>
@@ -21,7 +21,12 @@
         <website>www.github.com/ekarorgit/metadata.serialzone.cz</website>
         <email/>
         <source>www.github.com/ekarorgit/metadata.serialzone.cz</source>
-        <news>v 2.3 (2.1.2018)
+        <news>v 2.4 (22.1.2018)
+  [fixed] element id nyni obsahuje TVDBid pro trakt.tv
+  [fixed] normalizace mezer v nazvech
+  [added] moznost pouze anglickych/puvodnich nazvu
+
+v 2.3 (2.1.2018)
   [changed] XSLT pro parsovani serialzone API
   [changed] TheTVDB API 2.0 pro media
   [changed] Pokud je nazev v cz a en stejny, tak se nezobrazuje v zavorce
